--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -41,8 +41,8 @@
       <div class="footer-col">
         <h4>Contact</h4>
         <ul class="Navigation">
-          <li><a href="#">+20 1095582995</a></li>
-          <li><a href="#">WattWacher&#64;gmail.com</a></li>
+          <li><a href="#">+20 1000010001</a></li>
+          <li><a href="#">WattWatcher&#64;gmail.com</a></li>
         </ul>
       </div>
       <div class="footer-col">
