--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -121,8 +121,8 @@
     <div class="Container">
       <div class="contact">
         <h3>Contact Information</h3>
-        <a><i class="fa-solid fa-phone" style="color: #205149;"></i> <span>+20 1095582995</span></a>
-        <a ><i class="fa-solid fa-envelope" style="color: #205149;"></i> <span>WattWacher&#64;gmail.com</span></a>
+        <a><i class="fa-solid fa-phone" style="color: #205149;"></i> <span>+20 1000010001</span></a>
+        <a ><i class="fa-solid fa-envelope" style="color: #205149;"></i> <span>WattWatcher&#64;gmail.com</span></a>
         <a ><i class="fa-solid fa-location-dot" style="color: #205149;"></i><span>Mansoura</span></a>
       </div>
       <hr>
